revise comparative statics and add calcs to appendix

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -206,7 +206,7 @@ Low types don't give gifts in this separating equilibrium because the gift would
 
 This `best' concessions separating equilibrium, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
-Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving peace. We will thus focus on the pure concessions separating equilibrium in the analysis below because it provides the best chance for peace.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
+Interestingly, the patience threshold for this equilibrium to exist, $\de^c = \frac{W}{T+D}$, is the same as the threshold for the complete information repeated game in which deviating from ``Trust'' is discouraged through grim trigger punishments.\footnote{When $\de = \frac{W}{T+D}$, there is also a semi-separating equilibrium where only some high types give a concession. Here, high types give a smaller expected concession and trade off a lower probability of achieving peace. We will thus focus on the pure concessions separating equilibrium in the analysis below because it provides the best chance for peace and is possible over a much larger portion of the parameter space.} Using concessions to separate the types therefore can be seen as making up for the imperfect information in this setting.
 
 We complete our analysis of the \emph{concessions separating equilibrium} by comparing it to the \emph{no concessions separating equilibrium} in Section~\ref{sec:ncse}.
 
@@ -279,12 +279,13 @@ The patience threshold to separate through concessions with future material valu
 
 $\de_h$ is not involved in any of these calculations, so we can see that for any $\de_h \in [.5,.979)$, separating through concessions is possible when concessions have no material value but is not possible when they do have future material value. That is, future material value can destroy the opportunity for peace. \hfill $\blacksquare$ 
 
-Comparative statics provide intuition for why using concessions with future material value makes it harder to achieve peace. The patience threshold is decreasing in $T$ because the benefit from cooperating with another high type increases. Similarly, the threshold is increasing in $D$ because the magnitude of future damages from pairing with a low type increases. Perhaps less obvious is the impact of $W$: here the threshold is again increasing. This is because the high type's own temptation to not give a gift and to use a received concession for military purposes increases in $W$.
+The comparative statics for the patience threshold $\de^c = \frac{W}{T+D}$ are straightforward for the \emph{concession separating equilibrium} when there's no material value. The threshold increases and cooperation becomes less likely when $W$ increases; the threshold decreases when either $T$ or $D$ increase. These relationships hold with a small caveat for the \emph{concession separating equilibrium} when there \emph{is} material value when the patience threshold becomes $\de^{1} = \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D + T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1$.\footnote{The caveat is that, if both $T$ and $W$ become sufficiently large, the patience threshold will increase in $D$.} The patience threshold increases in $W$ because it makes the benefit from playing Fight larger. The patience threshold decreases in $T$ and $D$, but for different reasons. $T$ is straightforward: a larger $T$ is a larger benefit from playing Trust. In contrast, a larger $D$ is a bigger cost of the negotiating partner playing Fight. These relationships are not fundamentally changed by the presence of future material value because the future material value is proportional to the fundamental values of $W$, $T$, and $D$.
 
-When the low type's patience level $\de_l$ increases, the high type's patience threshold decreases because a smaller gift is required to disincentivize the low type from pretending to be a high type. Finally, the patience threshold is decreasing in $p$, the proportion of cooperative types in the population. This happens because a higher $p$ increases the chances of cooperation, a reciprocated gift, and the benefits from the associated public goods. The larger expected gain from a gift makes states willing to bear the cost of giving a larger gift; thus, when p is higher, a larger gift is necessary to deter the low type from mimicking the high type. In contrast, in the model with no material value---where the incentives are the same as in the model of the next section where material value can be destroyed---the need to give a larger gift is exactly offset by the increased value of cooperation when there is no material value. Thus, an increase in $p$ increases the range of patience levels under which cooperation can be achieved when there is material value but makes no change if there is no material value.\footnote{Comparative statics calculations available from the authors upon request.} 
+There are, however, two variables that do not affect the patience threshold in the no material value case that \textit{do} affect the threshold when there is future material value: $\de_l$ and $p$. When the low type's patience level $\de_l$ increases, the high type's patience threshold increases; this is because a more patient low type requires a larger gift in order not to mimic the high type. In the case of no material value, the low type's discount factor doesn't enter into the gift, and therefore it doesn't influence how much patience is required for cooperation.
 
-Thus only an increase in the benefit from `Peace' and an increase in the low type's patience level make it easier to achieve `Peace' when gifts have future material value. Increases in all other parameters make it harder to achieve `Peace.'
- 
+The other variable that influences the patience threshold in the case of future value is $p$, the proportion of cooperative types in the population. Although the gift in the no-future-material-value case \emph{is} a function of $p$, it is a linear function of $p$ just like the variables $T$, $W$, and $D$. Thus the cost of paying the gift and the direct benefits in the repeated game increase at the same rate. In the future-material-value case, the size of the gift required to separate the high types from the low types increases more than linearly in $p$ and thus faster than the other terms. Therefore the patience threshold increases as $p$ increases.\footnote{For the comparative statics calculations, see Appendix~\ref{ap:mat_val}.} 
+
+
 \subsection{Material Value of Concession can be Destroyed}
 \label{sec:matval}
 We now relax the assumption about the benefit of a concession being equal to its cost and instead allow countries to ``burn'' a portion of the concession they give. For instance, when decommissioning weapons, rebels leave no material value of the weapons intact to benefit the recipient, but it still signals good intentions on behalf of the giver. Here, we allow the giving of efficient concessions along with new options to give a variety of less efficient concessions. 
@@ -520,6 +521,7 @@ Rearranging,
 i.e. The high types prefer the \emph{concessions separating equilibrium} when $p$ is smaller than $\frac{W}{T+D}$. \hfill $\blacksquare$
 
 \subsection{Concessions with Material Value}
+\label{ap:mat_val}
 \emph{Proof of Theorem \ref{theorem:csemv}:}\\
 In the separating equilibrium constructed here, players will believe that any concession not equal to the equilibrium concession of the high type $g_h$ is a low type gift. In this case, the binding incentive compatibility constraint is the low type IC constraint, which when simplified to allow $g_l=0$ following Lemma~\ref{lemma:3} is: 
 \begin{equation}
@@ -577,6 +579,62 @@ Substituting the minimum efficient concession from Expression~\ref{eq:matval2}, 
 	\de_h \geq \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1 = \de^1
 \ee
 That is, there is no parameter restriction beyond our definition of what it means for a player to be a high type. \hfill $\blacksquare$
+
+
+\vskip.3in
+\noindent\emph{Comparative statics}
+
+First, we examine the gifts in a \emph{concessions separating equilibrium} first with no material value (or destroyed material value) and then when there is future material value.
+
+That the gift in the {concessions separating equilibrium} with no material value (or destroyed material value) is increasing in $p$ is direct since the gift is equal to $p(T+D)$. It is also clearly increasing in both $T$ and $D$.
+
+That the gift in the model with material value, $g^1 = \frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}$, is increasing in $p$ is straightforward. Recall that all the variables are assumed to be strictly positive, with $0 < \delta_l < 1$. It follows that the numerator is increasing in $p$ and the denominator is decreasing in $p$ and assumed positive. Therefore, $g^1$ is increasing in $p$. In formal terms, $\frac{\partial g^1}{\partial p} = \frac{(1 - \de_l +D)(T+D)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2} > 0$.
+
+$g^1$ is unchanged in $W$ since $W$ does not enter the expressing anywhere. The other three parameters require working out the formal result.
+
+Patience level of the low type: $$\frac{\partial g^1}{\partial \delta_l} = \frac{\left(\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right)(-p)(T+D) - \left(1-\de_l\right)p\left(D + T\right)(-1)(1-pT)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$  $$= \frac{-\left(\left(1-\de_l\right)\left(1 - pT \right)p(T+D) + (1-p) D\right)p(T+D) + \left(1-\de_l\right)p\left(D +	 T\right)(1-pT)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$ $$= \frac{(1-p) pD(T+D)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}.$$ Every term in the numerator is positive, and the denominator is a squared term so it is positive. Therefore we have $\frac{\partial g^1}{\partial \delta_l} > 0$.
+
+Benefit from negotiating partner playing Trust: 
+$$\frac{\partial g^1}{\partial T} = \frac{\left(\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right)(1-\de_l)p - \left(1-\de_l\right)p\left(D + T\right)(\de_l p -p)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{\left[(1-\de_l)p\right] \left\{\left(1-\de_l\right)\left(1 - pT + pD + pT\right) + (1-p) D\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{\left[(1-\de_l)p\right] \left\{\left(1-\de_l\right)\left(1 + pD \right) + (1-p) D\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}.$$ Every term in the numerator is positive, and the denominator is a squared term so it is positive. Therefore we have $\frac{\partial g^1}{\partial T} > 0$.
+
+Damages from negotiating partner playing Fight: $$\frac{\partial g^1}{\partial D} = \frac{\left(\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right)(1-\de_l)p - \left(1-\de_l\right)p\left(D + T\right)(1 -p)}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{(1-\de_l)p\left\{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D - \left(D + T\right)(1 -p)\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{(1-\de_l)p\left\{\left(1-\de_l\right)\left(1 - pT \right) - T(1 -p)\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{(1-\de_l)p\left\{1-\de_l -pT + \de_l p T - T +pT\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}$$
+$$= \frac{(1-\de_l)p\left\{1-\de_l + \de_l p T - T\right\}}{\left[\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D\right]^2}.$$ Because both the denominator and $(1-\de_l)p$ are strictly positive, the sign of this derivative matches the sign of $1-\de_l + \de_l p T - T$. It is positive when $\frac{1-\de_l}{1-\de_l p} > T$ and negative otherwise. So, when the benefit from the partner playing trust is sufficiently mall, the gift size will increase in $D$, but otherwise the gift size will decrease in the damages from the negotiating partner playing Fight.
+
+
+We now turn to the patience threshold that defines the high type. In the {concessions separating equilibrium} with no material value, we have $\frac{W}{T+D} = \de^{c}$, which increases in $W$ and decreases in $T$ and $D$. Notice it is not a function of $\delta_l$ or $p$.
+
+The results for the patience threshold when there is material value are more complex. First, recall that $\de^1 = \frac{p(W-D-T)}{\frac{\left(1-\de_l\right)p\left(D +	 T\right)}{\left(1-\de_l\right)\left(1 - pT \right) + (1-p) D}} + p (W-T) + (1-p)D + 1$ where the denominator of the first term is simply $\delta^1$.
+
+As in the case of no material value, the patience threshold is increasing in $W$: $\frac{\partial \delta^1}{\partial W} = \frac{p}{g^1} + p > 0$ since both $p$ and $g^1$ are strictly positive.
+
+The patience threshold is increasing in $p$. That is, 
+$$\frac{\partial \delta^1}{\partial p} = \frac{g^1 (W-D-T) - p(W-D-T)\frac{\partial g^1}{\partial p}}{\left(g^1\right)^2}+ W-T-D$$$$= (W-D-T)\left\{\frac{g^1  - p\frac{\partial g^1}{\partial p}}{\left(g^1\right)^2}+ 1\right\}=\frac{W-D-T	}{(g^1)^2}\left\{g^1  - p\frac{\partial g^1}{\partial p} + (g^1)^2\right\}$$
+$$=\frac{W-D-T}{(g^1)^2}\left\{p(T+D)\left[-\de_l (1-\de_l) - \de_l D - \de_l p D(1-\de_l)\right]\right\} > 0.$$
+We assume that $T > W - D$, so the numerator of the fraction is positive, while the denominator is positive since it's a squared term. $p(T+D)$ is positive because all three variables are positive. Each term in the square brackets is negative. Therefore the full expression is positive.
+
+The patience threshold is also increasing in the low type's patience level $\de_l$. That is,
+$$\frac{\partial \delta^1}{\partial \de_l} = \frac{g^1 \cdot 0 + p(T+D-W)\frac{\partial g^1}{\partial \de_l}}{\left(g^1\right)^2} = \frac{p(T+D-W)\frac{\partial g^1}{\partial \de_l}}{\left(g^1\right)^2} > 0.$$
+The result holds because each term in the expression is positive.
+
+In contrast, the patience threshold is decreasing in the benefit from the negotiating partner playing Trust, $T$. That is,
+$$\frac{\partial \delta^1}{\partial T} = \frac{-p \cdot g^1 + p(T+D-W) \frac{\partial g^1}{\partial T}}{(g^1)^2}-p = \frac{p}{(g^1)^2}\left\{ p(T+D-W) \frac{\partial g^1}{\partial T} - g^1 -(g^1)^2 \right\}$$
+$$= \frac{p}{(g^1)^2}\left\{-(1-\de_l)W - (1- \de_l P)WD -2TD(1-\de_l)p \right\} < 0.$$
+The result holds because $p$ and $g^1$ are positive, while each additive term in the curly braces is negative.
+
+The result is more nuanced for $D$, the cost of the negotiating partner playing Fight. 
+$$\frac{\partial \delta^1}{\partial D} = \frac{-p \cdot g^1 + p(T+D-W) \frac{\partial g^1}{\partial D}}{(g^1)^2}+ (1-p).$$
+If $T < \frac{1-\de_l}{1-\de_l p}$ so that $\frac{\partial g^1}{\partial D} > 0$, this expression will always be negative. As $T$ grows so that $\frac{\partial g^1}{\partial D} < 0$, the derivative remains negative as long as $T < \frac{1-\de_l+ \de_lD(1-p)}{1-\de_l}$. When T grows even larger, the derivative remains negative as long as $W < \frac{(1-p)\de_l(T+D)^2}{T -1 + \de_l - \de_l p T}$.
+
+
+
+
+
+
 
 \subsection{Material Value of Concessions can be Destroyed}
 \emph{Proof of Lemma~\ref{lemma:efficiency}:}\\
