two small clarifications in responses to referees

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -119,7 +119,7 @@ The probability of nature selecting the high type for a given country is $p$. Th
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
 
-Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors, focused on studying players' belief structures, see Maor and Solan (2015).  Our model differs in that it adds an initial period, before the repeated Prisoner's Dilemma begins, in which players make costly concessions to each other.  We will see that these concessions enable signaling between the players that render the analysis of their beliefs much simpler.} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
+Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors, focused on studying players' belief structures, see Maor and Solan (2015).  Our model differs in that it adds an initial period, before the repeated Prisoner's Dilemma begins, in which players make costly concessions to each other.  We will see that these concessions enable signaling between the players that render the analysis of their beliefs much simpler than in Maor and Solan (2015).} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
 
 The countries' stage game actions will be referred to as ``Trust'' and ``Fight'' as represented in Table 1, where Country 1 is the row player and Country 2 is the column player.
 
@@ -283,7 +283,7 @@ The comparative statics for the patience threshold $\de^c = \frac{W}{T+D}$ are s
 
 There are, however, two variables that do not affect the patience threshold in the no material value case that \textit{do} affect the threshold when there is future material value: $\de_l$ and $p$. When the low type's patience level $\de_l$ increases, the high type's patience threshold increases; this is because a more patient low type requires a larger gift in order not to mimic the high type. In the case of no material value, the low type's discount factor doesn't enter into the gift, and therefore it doesn't influence how much patience is required for cooperation.
 
-The other variable that influences the patience threshold in the case of future value is $p$, the proportion of cooperative types in the population. Although the gift in the no-future-material-value case \emph{is} a function of $p$, it is a linear function of $p$ just like the variables $T$, $W$, and $D$. Thus the cost of paying the gift and the direct benefits in the repeated game increase at the same rate. In the future-material-value case, the size of the gift required to separate the high types from the low types increases more than linearly in $p$ and thus faster than the other terms. Therefore the patience threshold increases as $p$ increases.\footnote{For the comparative statics calculations, see Appendix~\ref{ap:mat_val}.} 
+The other variable that influences the patience threshold in the case of future value is $p$, the proportion of cooperative types in the population. Although the gift in the no-future-material-value case \emph{is} an increasing function of $p$, it is a linear function of $p$ just like the variables $T$, $W$, and $D$. Thus the cost of paying the gift and the direct benefits in the repeated game increase at the same rate so that the likelihood of cooperative types does not vary in $p$ when gifts have no future material value. In the future-material-value case, the size of the gift required to separate the high types from the low types increases more than linearly in $p$ and thus faster than the other terms. Therefore the patience threshold in the future-material-value case increases as $p$ increases. That is, the cost of giving the gift weighs more heavily in the decision to cooperate relative to the material costs and benefits, requiring states to be more patient to separate and thus reducing the likelihood of cooperative types.\footnote{For the comparative statics calculations, see Appendix~\ref{ap:mat_val}.} 
 
 
 \subsection{Material Value of Concession can be Destroyed}
